# rust-fmt-size

./: README.md  results.md  run.rs
dyn-comparison/: Cargo.toml
dyn-comparison/.cargo/: config.toml
dyn-comparison/src/: main.rs
fmt-comparison/: Cargo.toml  memory.x
test-project/: Cargo.toml  rust-toolchain.toml
test-project/.cargo/: config.toml
test-project/src/: main.rs
