[package]
name = "test-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.3" }
heapless = { version = "0.7.16", features = ["ufmt-impl"] }
ufmt = "0.2.0"
ufmt_float = "0.2.0"

[profile.release]
lto = true
debug = false
opt-level = "z"
# panic = "abort"
codegen-units = 1
incremental = false

[features]
raw = []
fmt-no-args = []
fmt-u32 = []
fmt-i32 = []
fmt-f32 = []
ufmt-no-args = []
ufmt-u32 = []
ufmt-i32 = []
ufmt-f32 = []
